# battle

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: battle-benchmark.yml
src/battle/: cli.py  config.py  orchestrator.py  runner.py
src/battle/adapters/: __init__.py  base.py  baseline.py  homerun.py  superpowers.py
src/battle/evaluators/: llm_judge.py
src/battle/output/: __init__.py  html.py  json_out.py  terminal.py
src/battle/tests/: __init__.py  api.py
tests/: test_adapters.py  test_cli.py  test_config.py  test_evaluators.py  test_output.py  test_runner.py  test_templates.py
